--- a/missingkids/less/teaser.less
+++ b/missingkids/less/teaser.less
@@ -153,6 +153,9 @@
         &:last-child {
             margin-bottom: 0;
         }
+        a {
+            padding-left: 10px;
+        }
     }
 }
 
